JDK SoftEnvelopeGenerator patched. The preview playback release envelope now matches lotro much closer. The release is 200 ms, but the soundfonts exponential curve is amplified to the power of 10. This produces almost linear decreasing amplitude for the 200 ms. Maestro will sound 'worse' now, but closer to lotro.